Fixed links and headers

--- a/index.html
+++ b/index.html
@@ -2,19 +2,16 @@
 <script type="text/javascript" async
   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
 </script>
-<h1 id="chart-unit"><a href="http://tonyday567.github.io/chart-unit.html">chart-unit</a></h1>
-<p><a href="https://github.com/tonyday567/chart-unit"><img src="https://a248.e.akamai.net/assets.github.com/images/icons/emoji/octocat.png" alt="repo" /></a></p>
-<p><a href="https://travis-ci.org/tonyday567/chart-unit"><img src="https://travis-ci.org/tonyday567/chart-unit.png" alt="Build Status" /></a></p>
-<h1 id="chart-unit-1">chart-unit</h1>
+<h1 id="chart-unit-build-status"><a href="https://tonyday567.github.io/chart-unit.html">chart-unit</a> <a href="https://travis-ci.org/tonyday567/chart-unit"><img src="https://travis-ci.org/tonyday567/chart-unit.png" alt="Build Status" /></a></h1>
 <h2 id="scratchpad">scratchpad</h2>
-<p>My newest chart <code>padq $ linesXY def [[(0,0),(1,1)],[(0,0),(1,2)]]</code></p>
+<p>My newest chart <code>padsvg $ linesXY def [[(0,0),(1,1)],[(0,0),(1,2)]]</code></p>
 <div class="figure">
 <img src="other/scratchpad.svg" />
 
 </div>
 <p>This slowly growing collection of charts:</p>
 <ul class="incremental">
-<li>render nicely over a wide chart size range, svg and png formats.</li>
+<li>renders nicely over a wide chart size range, svg and png formats.</li>
 <li>render similarly at different scale</li>
 <li>are opinionated minimalism</li>
 <li>are unit shapes in the spirit of the <a href="http://projects.haskell.org/diagrams/doc/quickstart.html">diagrams</a> design space.</li>
