up to axis re-re-scaling

--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
-<meta charset="utf-8"> <link rel="stylesheet" href="other/lhs.css">
+<meta charset="utf-8"> <link rel="stylesheet" href="https://tonyday567.github.io/other/lhs.css">
 <script type="text/javascript" async
   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
 </script>
 <h1 id="chart-unit-build-status"><a href="https://tonyday567.github.io/chart-unit">chart-unit</a> <a href="https://travis-ci.org/tonyday567/chart-unit"><img src="https://travis-ci.org/tonyday567/chart-unit.png" alt="Build Status" /></a></h1>
 <p><a href="https://tonyday567.github.com/chart-unit">repo</a></p>
 <p>latest development:</p>
+<p>Working out how to safely clip a chart.</p>
 <div class="figure">
 <img src="other/scratchpad.svg" />
 
 </div>
-<pre><code>scratch $ pad 1.1 $ beside (r2 (-1,0)) (beside (r2 (0,-1)) (((unitSquare # fcA (color $ Color 0.2 0.2 0.2 0.05) # lw 0) &lt;&gt; (centerXY $ scaleX (1/1.5) $ scaleY (1/10) $ (clipped (pathFromTrail $ (closeTrail $ fromVertices (p2 &lt;$&gt; [(0.5,0),(0.5,10),(2,10),(2,0)]))) $ ((mconcat . zipWith line1 (zipWith LineConfig [0.01,0.02,0.03] (opacs 0.5 palette1)))) (fmap r2 &lt;$&gt; [ [(0.0,1.0),(1.0,1.0),(2.0,5.0)], [(0.0,0.0),(3.0,3.0)]]))))) (axis def (Range (0.5,2)))) (axis (axisOrientation .~ Y $ def) (Range (0,2)))</code></pre>
-<p>This is my manual hack of what should happen to the line chart example when drawn using a scale different to the data scale.</p>
-<p>Next step is to refactor back into the chartHub</p>
 <h2 id="tldr">tl;dr</h2>
 <p>This slowly growing collection of charts:</p>
 <ul class="incremental">
