--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <img src="other/scratchpad.svg" />
 
 </div>
-<h2 id="tldr">tl;dr</h2>
+<h2 id="unital-charting">unital charting</h2>
 <p>This slowly growing collection of charts:</p>
 <ul class="incremental">
 <li>renders nicely in svg over a wide chart size. png is not so good.</li>
