added pixel chart

--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@ withChart (chartAspect .~ asquare $ def) (scatters scatterDefs) xys1</code></pre
 <img src="other/exampleLabelledBar.svg" />
 
 </div>
+<h2 id="pixel-chart">pixel chart</h2>
+<p>A chart with a color for each XY point in a plane. Close synonyms are probably an area chart, a surface chart. A contour chart must be close.</p>
+<div class="figure">
+<img src="other/examplePixels.svg" />
+
+</div>
 <h2 id="compound-charts">Compound charts</h2>
 <p><code>chart-unit</code> is a fairly thin wrapper over diagrams that establishes the basics of what a chart is, and provides some sane defaults. From this starting point, production of high-quality charting is easy and pleasant. Two examples:</p>
 <p>A scatter chart with histograms of the data along the x &amp; y dimensions.</p>
