prepping for production

--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
-<meta charset="utf-8"> <link rel="stylesheet" href="https://tonyday567.github.io/other/lhs.css">
-<script type="text/javascript" async
-  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
-</script>
-<h1 id="chart-unit"><a href="https://tonyday567.github.io/chart-unit">chart-unit</a></h1>
+<h1 id="chart-unit"><a href="https://github.com/tonyday567/chart-unit">chart-unit</a></h1>
 <p><a href="https://travis-ci.org/tonyday567/chart-unit"><img src="https://travis-ci.org/tonyday567/chart-unit.svg" alt="Build Status" /></a> <a href="https://hackage.haskell.org/package/chart-unit"><img src="https://img.shields.io/hackage/v/chart-unit.svg" alt="Hackage" /></a> <a href="http://stackage.org/lts/package/chart-unit"><img src="https://www.stackage.org/package/chart-unit/badge/lts" alt="lts" /></a> <a href="http://stackage.org/nightly/package/chart-unit"><img src="https://www.stackage.org/package/chart-unit/badge/nightly" alt="nightly" /></a></p>
-<p><a href="https://github.com/tonyday567/chart-unit">repo</a></p>
-<p><code>chart-unit</code> is an experimental haskell chart library.</p>
-<p>scratchpad</p>
-<p><img style="border:5px solid grey" src="other/scratchpad.svg"></p>
+<p><code>chart-unit</code> is a haskell chart library focusing on a small set of high-quality charts using native haskell. Here's a recent example, chock-a-block fill of titles and legends, since they've just been added:</p>
+<p><img style="border:2px solid grey" src="other/exampleChart.svg"></p>
+<h2 id="reduced">reduced</h2>
+<p><img style="height=40%" src="other/exampleChart.svg"></p>
 <h2 id="unital-charting">unital charting</h2>
 <p>This slowly growing collection of charts:</p>
 <ul class="incremental">
