--- a/alphabeta.html
+++ b/alphabeta.html
@@ -1,11 +1,3 @@
-<meta charset="utf-8"> <link rel="stylesheet" href="https://tonyday567.github.io/other/lhs.css">
-<script type="text/javascript" async
-  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
-</script>
-<h1 id="alpha-beta-testing">[alpha beta testing]</h1>
-<h2 id="alpha">alpha</h2>
-<p><img style="border:2px solid grey" src="other/testAlpha.svg"></p>
-<h2 id="beta">beta</h2>
-<p><img style="border:2px solid grey" src="other/testBeta.svg"></p>
-<h2 id="compare">compare</h2>
-<p><img style="border:2px solid grey" src="other/testab.svg"></p>
+<p><img style="border:1px solid red; float: left" src="other/testAlpha.svg"></p>
+<p><img style="border:1px solid red; float: left" src="other/testBeta.svg"></p>
+<p><img style="border:1px solid red; float: left" src="other/testab.svg"></p>
