--- a/index.html
+++ b/index.html
@@ -105,6 +105,17 @@
 <img src="other/labelledBarExample.svg" />
 
 </div>
+<h2 id="from-the-haskell-survey-...">From the Haskell survey ...</h2>
+<h2 id="q7">q7</h2>
+<div class="figure">
+<img src="other/q7Example.svg" />
+
+</div>
+<h2 id="q24">q24</h2>
+<div class="figure">
+<img src="other/q24Example.svg" />
+
+</div>
 <h2 id="histogram-diff">histogram diff</h2>
 <div class="figure">
 <img src="other/histDiffExample.svg" />
