--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 </tbody>
 </table>
 <h1 id="gallery">Gallery</h1>
-<p>The main chart types and the power of diagrams make it easy to invent new charts. Hrere's some inspiration (all code for these charts is in <a href="https://github.com/tonyday567/chart-unit/blob/master/examples/sourceExamples.hs">examples/sourceExamples.hs</a>).</p>
+<p>Composable chart types and the power of diagrams make it easy to invent new charts. Here's some inspiration (all code for these charts is in <a href="https://github.com/tonyday567/chart-unit/blob/master/examples/sourceExamples.hs">examples/sourceExamples.hs</a>).</p>
 <h2 id="schoolbook">schoolbook</h2>
 <div class="figure">
 <img src="other/schoolbookExample.svg" />
