moved to generic-lens

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 </div>
 <h1 id="why-the-name-chart-unit">Why the name chart-unit?</h1>
 <p>Most of the behind-the-scenes grunt work is scaling data, projecting points from one range to another, and computing position. A key to making these computations neat was <code>one = Range -0.5 0.5</code> and <code>one = Rect -0.5 0.5 -0.5 0.5</code> as the (multiplicative) units of a chart range. See <a href="https://github.com/tonyday567/numhask-range">numhask-range</a> for a monologue.</p>
+<h1 id="generic-lens-rocks">generic-lens rocks</h1>
+<p>https://www.reddit.com/r/haskell/comments/7e8bom/slides_joy_frustration_of_putting_34000_lines_of/</p>
 <h1 id="whats-with-the-funny-names">What's with the funny names?</h1>
 <p>Charting is an age-old craft, and stuffed to the brim with cliche and jargon. I wanted to cut through the cruft of what is thought of as a chart (and charting has been dominated by excel for 30 years), and approach charting from a haskelly perspective. The funny names were the cohorts that popped out. A rough translation:</p>
 <table>
