--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 </tbody>
 </table>
 <h1 id="gallery">Gallery</h1>
-<p>Composable chart types and the power of diagrams make it easy to invent new charts. Here's some inspiration (all code for these charts is in <a href="https://github.com/tonyday567/chart-unit/blob/master/examples/sourceExamples.hs">examples/sourceExamples.hs</a>).</p>
+<p>Composable chart types and the power of diagrams make it easy to invent new charts. Here's some inspiration (all code for these charts is in <a href="https://github.com/tonyday567/chart-unit/blob/master/examples/gallery.hs">examples/gallery.hs</a>).</p>
 <h2 id="grid">grid</h2>
 <div class="figure">
 <img src="other/gridExample.svg" />
@@ -150,7 +150,7 @@
 
 </div>
 <h1 id="workflow">workflow</h1>
-<pre><code>stack build --test --exec &quot;$(stack path --local-install-root)/bin/chart-source-examples&quot; --exec &quot;$(stack path --local-bin)/pandoc -f markdown -i other/header.md readme.md other/footer.md -t html -o index.html --filter pandoc-include --mathjax&quot; --file-watch</code></pre>
+<pre><code>stack build --test --exec &quot;$(stack path --local-install-root)/bin/chart-unit-source-examples&quot; --exec &quot;$(stack path --local-install-root)/bin/chart-unit-main-example&quot; --exec &quot;$(stack path --local-install-root)/bin/chart-unit-gallery&quot; --exec &quot;$(stack path --local-bin)/pandoc -f markdown -i other/header.md readme.md other/footer.md -t html -o index.html --filter pandoc-include --mathjax&quot; --file-watch</code></pre>
 <hr />
 <div class="footer">
 <p>Made with love 'n' care; and <a href="https://haskell-lang.org/">haskell</a>, <a href="https://pandoc.org">pandoc</a>, and <a href="https://docs.haskellstack.org/en/stable/README/">stack</a>.</p>
