--- a/index.html
+++ b/index.html
@@ -149,6 +149,12 @@
 <img src="other/skinnyExample.svg" />
 
 </div>
+<h1 id="tests">tests</h1>
+<p>Differences between text methods, across alignments</p>
+<div class="figure">
+<img src="other/testTextDiffs.svg" />
+
+</div>
 <h1 id="workflow">workflow</h1>
 <pre><code>stack build --test --exec &quot;$(stack path --local-install-root)/bin/chart-unit-source-examples&quot; --exec &quot;$(stack path --local-install-root)/bin/chart-unit-main-example&quot; --exec &quot;$(stack path --local-install-root)/bin/chart-unit-gallery&quot; --exec &quot;$(stack path --local-bin)/pandoc -f markdown -i other/header.md readme.md other/footer.md -t html -o index.html --filter pandoc-include --mathjax&quot; --file-watch</code></pre>
 <hr />
