--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
 </div>
 <h1 id="workflow">workflow</h1>
-<pre><code>stack build --test --exec &quot;$(stack path --local-install-root)/bin/chart-unit-source-examples&quot; --exec &quot;$(stack path --local-install-root)/bin/chart-unit-main-example&quot; --exec &quot;$(stack path --local-install-root)/bin/chart-unit-gallery&quot; --exec &quot;$(stack path --local-bin)/pandoc -f markdown -i other/header.md readme.md other/footer.md -t html -o index.html --filter pandoc-include --mathjax&quot; --file-watch</code></pre>
+<pre><code>stack build --test --haddock --exec &quot;$(stack path --local-install-root)/bin/chart-unit-source-examples&quot; --exec &quot;$(stack path --local-install-root)/bin/chart-unit-main-example&quot; --exec &quot;$(stack path --local-install-root)/bin/chart-unit-gallery&quot; --exec &quot;$(stack path --local-bin)/pandoc -f markdown -i other/header.md readme.md other/footer.md -t html -o index.html --filter pandoc-include --mathjax&quot; --file-watch</code></pre>
 <hr />
 <div class="footer">
 <p>Made with love 'n' care; and <a href="https://haskell-lang.org/">haskell</a>, <a href="https://pandoc.org">pandoc</a>, and <a href="https://docs.haskellstack.org/en/stable/README/">stack</a>.</p>
