--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 </script>
 <h1 id="chart-unit"><a href="https://github.com/tonyday567/chart-unit">chart-unit</a></h1>
 <p><a href="https://travis-ci.org/tonyday567/chart-unit"><img src="https://travis-ci.org/tonyday567/chart-unit.svg" alt="Build Status" /></a> <a href="https://hackage.haskell.org/package/chart-unit"><img src="https://img.shields.io/hackage/v/chart-unit.svg" alt="Hackage" /></a> <a href="http://stackage.org/lts/package/chart-unit"><img src="https://www.stackage.org/package/chart-unit/badge/lts" alt="lts" /></a> <a href="http://stackage.org/nightly/package/chart-unit"><img src="https://www.stackage.org/package/chart-unit/badge/nightly" alt="nightly" /></a></p>
-<p><code>chart-unit</code> is a haskell chart library focusing on a small set of high-quality charts using native haskell. Here's a recent example, chock-a-block full of titles and legends (that needed testing):</p>
+<p><code>chart-unit</code> is a chart library providing a chart ADT, combinators and a small set of high-quality charts using native haskell.</p>
 <div class="figure">
 <img src="chart-unit/other/mainExample.svg" />
 
 </div>
 <h1 id="chart-types">Chart Types</h1>
-<p>So far, there are 9 major chart types:</p>
+<p>The chart types include:</p>
 <div class="figure">
 <img src="chart-unit-examples/other/textHudExample.svg" />
 
@@ -44,14 +44,11 @@
 
 </div>
 <div class="figure">
-<img src="chart-unit-examples/other/barExample.svg" />
+<img src="chart-unit/other/barExample.svg" />
 
 </div>
 <h1 id="why-the-name-chart-unit">Why the name chart-unit?</h1>
 <p>Most of the behind-the-scenes grunt work is scaling data, projecting points from one range to another, and computing position. A key to making these computations neat was <code>one = Range -0.5 0.5</code> and <code>one = Rect -0.5 0.5 -0.5 0.5</code> as the (multiplicative) units of a chart range. See <a href="https://github.com/tonyday567/numhask-range">numhask-range</a> for a monologue.</p>
-<h1 id="generic-lens-rocks">generic-lens rocks</h1>
-<p>generic lens is the future of api in haskell:</p>
-<p>https://www.reddit.com/r/haskell/comments/7e8bom/slides_joy_frustration_of_putting_34000_lines_of/</p>
 <h1 id="whats-with-the-funny-names">What's with the funny names?</h1>
 <p>Charting is an age-old craft, and stuffed to the brim with cliche and jargon. I wanted to cut through the cruft of what is thought of as a chart (and charting has been dominated by excel for 30 years), and approach charting from a haskelly perspective. The funny names were the cohorts that popped out. A rough translation:</p>
 <table>
